--- a/src/index.css
+++ b/src/index.css
@@ -1,19 +1,20 @@
 /* ELEMENT STYLES -------------------- */
 body {
-  background: #e8e7e7; 
+  background: #e8e7e7;
   font-family: arial;
   text-transform: uppercase;
   background-image: url(https://previews.123rf.com/images/krikhill/krikhill1905/krikhill190500081/123750286-abstract-fun-background-baby-pattern-color-dots-hipster-style-80s-90s-funky-abstract-pattern-geometr.jpg);
+  background-repeat: initial;
 }
 
 header {
-  color: #FFF;
+  color: #fff;
   padding: 5px 10px;
   text-align: center;
   display: flex;
   align-items: center;
   background-color: #8b78dd;
-  border-bottom: solid 2px #D4CAFF;
+  border-bottom: solid 2px #d4caff;
 }
 
 header h1 {
@@ -26,10 +27,10 @@ header h1 {
 /* FORMS */
 form {
   display: flex;
-  background-color: #8063FA;
+  background-color: #8063fa;
 }
 
-input[type=text] {
+input[type="text"] {
   flex-grow: 1;
   border-width: 0 0 1px 0;
   margin: 15px 10px 15px 15px;
@@ -44,19 +45,19 @@ input[type=text] {
   outline: none;
 }
 
-input[type=text]::-webkit-input-placeholder{
+input[type="text"]::-webkit-input-placeholder {
   color: #320ed1;
   letter-spacing: 2px;
 }
 
-input[type=text]:focus{
+input[type="text"]:focus {
   background-color: rgba(0, 0, 0, 0.2);
 }
 
-input[type=submit] {
+input[type="submit"] {
   display: block;
-  font-size: .6em;
-  margin: 15px 15px 15px 0; 
+  font-size: 0.6em;
+  margin: 15px 15px 15px 0;
   padding: 10px;
   background-color: #250c95;
   border-radius: 5px;
@@ -69,11 +70,10 @@ input[type=submit] {
   cursor: pointer;
 }
 
-button, 
-input[type=submit] {
+button,
+input[type="submit"] {
   outline: none;
-  transition: background-color 0.2s ease,
-              color 0.2s ease;
+  transition: background-color 0.2s ease, color 0.2s ease;
 }
 
 /* ICONS */
@@ -81,17 +81,19 @@ svg {
   width: 28px;
   height: 19px;
   margin-right: 5px;
-  fill: #F0F0F0;
+  fill: #f0f0f0;
 }
 
 .is-high-score {
-  fill: #FFC657;
+  fill: #ffc657;
   animation: grow 0.35s ease-in-out;
   transform-origin: 50% 50%;
 }
 
 @keyframes grow {
-  50% { transform: scale(1.4) rotate(-3deg); }
+  50% {
+    transform: scale(1.4) rotate(-3deg);
+  }
 }
 
 /* COMPONENT STYLES -------------------- */
@@ -107,40 +109,40 @@ svg {
 .player {
   display: flex;
   font-size: 1.2em;
-  border-bottom: solid 2px #EEEEEE;
+  border-bottom: solid 2px #eeeeee;
   letter-spacing: 2px;
 }
 
-  .player:last-of-type {
-    border-bottom-color: #D4CAFF;
-  }
+.player:last-of-type {
+  border-bottom-color: #d4caff;
+}
 
-  .player-name:hover .remove-player {
-    visibility: visible;
-  }
+.player-name:hover .remove-player {
+  visibility: visible;
+}
 
-  .player-name,
-  .counter-score {
-    color: #2F2366;
-  }
+.player-name,
+.counter-score {
+  color: #2f2366;
+}
 
-  .player-name {
-    flex-grow: 1;
-    line-height: 3.5em;
-    padding-left: 10px;
-  }
+.player-name {
+  flex-grow: 1;
+  line-height: 3.5em;
+  padding-left: 10px;
+}
 
-  .remove-player {
-    font-size: 1.15em;
-    border: none;
-    outline: none;
-    visibility: hidden;
-    color: #EF5350;
-    cursor: pointer;
-    margin: 0 10px 0 0;
-    padding: 0;
-    background: none;
-  }
+.remove-player {
+  font-size: 1.15em;
+  border: none;
+  outline: none;
+  visibility: hidden;
+  color: #ef5350;
+  cursor: pointer;
+  margin: 0 10px 0 0;
+  padding: 0;
+  background: none;
+}
 
 .stats,
 .stopwatch {
@@ -153,16 +155,16 @@ svg {
   font-weight: normal;
 }
 
-  .stats td:first-child {
-    text-align: right;
-    font-weight: normal;
-    letter-spacing: 2px;
-    font-size: .7em;
-  }
+.stats td:first-child {
+  text-align: right;
+  font-weight: normal;
+  letter-spacing: 2px;
+  font-size: 0.7em;
+}
 
-  .stats td:last-child {
-    text-align: left;
-  }
+.stats td:last-child {
+  text-align: left;
+}
 
 .stopwatch {
   padding: 15px 10px 5px 10px;
@@ -170,72 +172,72 @@ svg {
   background: #d8d529;
 }
 
-  .stopwatch-time {
-    display: block;
-    font-family: monospace;
-    font-size: 2.15em;
-  }
+.stopwatch-time {
+  display: block;
+  font-family: monospace;
+  font-size: 2.15em;
+}
 
-  .stopwatch button {
-    margin: 8px 5px;
-    background-color: #0f51cc;
-    border-radius: 5px;
-    padding: 7px 8px;
-    border: none;
-    color: #fff;
-    letter-spacing: 2px;
-    font-weight: bold;
-    text-shadow: none;
-    text-transform: uppercase;
-  }
+.stopwatch button {
+  margin: 8px 5px;
+  background-color: #0f51cc;
+  border-radius: 5px;
+  padding: 7px 8px;
+  border: none;
+  color: #fff;
+  letter-spacing: 2px;
+  font-weight: bold;
+  text-shadow: none;
+  text-transform: uppercase;
+}
 
-  .stopwatch button:hover,
-  input[type=submit]:hover {
-    background: #fff;
-    color: #44338D;
-    cursor: pointer;
-  }
+.stopwatch button:hover,
+input[type="submit"]:hover {
+  background: #fff;
+  color: #44338d;
+  cursor: pointer;
+}
 
-  .stopwatch h2 {
-    font-size: .6em;
-    margin: 0;
-    font-weight: normal;
-    letter-spacing: 2px;
-  }
+.stopwatch h2 {
+  font-size: 0.6em;
+  margin: 0;
+  font-weight: normal;
+  letter-spacing: 2px;
+}
 
 .counter {
   display: flex;
   width: 190px;
 }
 
-  .counter-action {
-    border: none;
-    font-size: 1.15em;
-    font-weight: bold;
-    color: #B0AEBA;
-    background-color: #DCDCDC;
-    display: block;
-    padding: 20px 20px;
-    cursor: pointer;
-    outline: none;
-  }
+.counter-action {
+  border: none;
+  font-size: 1.15em;
+  font-weight: bold;
+  color: #b0aeba;
+  background-color: #dcdcdc;
+  display: block;
+  padding: 20px 20px;
+  cursor: pointer;
+  outline: none;
+}
 
-  .counter-action:hover {
-    color: #fff;
-  }
+.counter-action:hover {
+  color: #fff;
+}
 
-  .increment:hover {
-    background: #83D97C;
-  }
+.increment:hover {
+  background: #83d97c;
+}
 
-  .decrement:hover {
-    background: #EF5350;
-  }
+.decrement:hover {
+  background: #ef5350;
+}
 
-  .counter-score {
-    flex-grow: 1;
-    text-align: center;
-    font-family: monospace;
-    font-size: 2em;
-    line-height: 2em;
-  }
+.counter-score {
+  flex-grow: 1;
+  text-align: center;
+  font-family: monospace;
+  font-size: 2em;
+  line-height: 2em;
+}
